fixed z-index position of overlay and nav links

--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ section {
 
 .splash content, .splash nav{
     position: relative;
-    z-index: 9;
+    z-index: 11;
 }
 
 .arrow {
